--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,9 @@ matrix:
           - ubuntu-toolchain-r-test
       before_install: 
       - sudo apt-get update
-      - sudo apt-get -y install build-essential python3 python3-dev python3-pip python3-virtualenv mpich libmpich-dev
+      - sudo apt-get -y install build-essential mpich libmpich-dev
       script:
-      - virtualenv -p python3 .venv
+      - virtualenv -p python3.5 .venv
       - source .venv/bin/activate
       - pip install -U numpy pandas pybind11
       - make && make test
@@ -29,7 +29,7 @@ matrix:
           - ubuntu-toolchain-r-test
       before_install: 
       - sudo apt-get update
-      - sudo apt-get -y install build-essential python3.6 python3.6-dev python3-pip python3.6-venv mpich libmpich-dev
+      - sudo apt-get -y install build-essential mpich libmpich-dev
       script:
       - virtualenv -p python3.6 .venv
       - source .venv/bin/activate
@@ -70,27 +70,27 @@ matrix:
     #   - python3 -c"import numpy;print(numpy.__version__)"
     #   - python3 -c"import pandas;print(pandas.__version__)"
 
-    - language: python
-      python: 3.5
-      before_install:
-      - sudo apt-get update
-      - sudo apt-get -y install build-essential mpich libmpich-dev
-      script:
-      - pip install -U numpy pandas pybind11 
-      - python setup.py build
-      - python setup.py test
+    # - language: python
+    #   python: 3.5
+    #   before_install:
+    #   - sudo apt-get update
+    #   - sudo apt-get -y install build-essential mpich libmpich-dev
+    #   script:
+    #   - pip install -U numpy pandas pybind11 
+    #   - python setup.py build
+    #   - python setup.py test
 
-    - language: python
-      python: 3.6
-      before_install:
-      - sudo apt-get update
-      - sudo apt-get -y install build-essential mpich libmpich-dev
-      script:
-      - pip install -U pybind11 numpy pandas
-      - python setup.py build
-      - ./run_example.sh hello_world
-      - ./run_example.sh diagnostics
-      - python setup.py test
+    # - language: python
+    #   python: 3.6
+    #   before_install:
+    #   - sudo apt-get update
+    #   - sudo apt-get -y install build-essential mpich libmpich-dev
+    #   script:
+    #   - pip install -U pybind11 numpy pandas
+    #   - python setup.py build
+    #   - ./run_example.sh hello_world
+    #   - ./run_example.sh diagnostics
+    #   - python setup.py test
 
   allow_failures:
     - python: 3.5
